--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-  - assets/imgs/splash/user.png
+  - assets/imgs/incons/user.png
+  - assets/imgs/incons/icon-user.png
+  - assets/imgs/home/user-example.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
